--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ name = "pypi"
 langchain = "*"
 black = "*"
 python-dotenv = "*"
+async-timeout = "*"
+openai = "*"
+google-search-results = "*"
 
 [dev-packages]
 
